...
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="50dp"
        android:background="#33FFFFFF"/>

    <Button
        android:id="@+id/fragment2btn"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/black"
        android:text="Profile"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
...
